Basic html structured

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <p>This is testing page</p>
+    <head>
+        <nav>
+          <p>this is navigation bar</p>
+        </nav>
+
+    </head>
+    <main>
+    <section>
+        <p> This is section 1</p>
+    </section>
+    <section>
+        <p>This is section 2</p>
+    </section>
+    <section>
+        <p> This is section 3</p>
+    </section>
+
+    </main>
+    <footer>
+        <p>This is footer section </p>
+    </footer>
 </body>
 </html>
