header section added with introduction

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class= "d-flex flex-column min-vh-100">
-    <header>
         <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
             <a class="navbar-brand" href="index.html"> 
                 <img src="assets/images/logo.png" alt="Shining Sprouts" height="40" width="40" class="logo">
@@ -60,7 +59,48 @@
               </ul>
             </div>
           </nav>
-
+    <header id="header" class="container">
+        <div class="row">
+            <div class="col-12 col-xl-6 text-center">
+                <h1 class="h1"><strong> Shining Sprouts Child Care </strong></h1>
+                <h5 class="lead h3"> Welcome to Shining Sprouts Child Care <br> <em> -Where Little Minds Grow! </em></h5>
+                <p class="my-4">At Shining Sprouts Child Care, we provide a safe, loving, and fun environment where children learn,
+                   play, and thrive. Our dedicated team nurtures creativity, curiosity, and confidence through quality care and engaging 
+                  activities. Your child’s happiness and development are our top priorities. Join us today for a bright future!.</p>
+            </div>
+            <div class="col-12 col-xl-6">
+              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/images/childcare_img4.avif" class="d-block w-100" alt="Funny Child Care Centre">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/childcare_img1.jpg" class="d-block w-100" alt="Funny Child Care Centre">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/childcare_img2.jpg" class="d-block w-100" alt="Funny Child Care Centre">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/childcare_img3.jpg" class="d-block w-100" alt="Funny Child Care Centre">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        
+            </div>
+          </div>
     </header>
     <main>
     <section>
