Social media and contact address added in th footer section

--- a/index.html
+++ b/index.html
@@ -156,22 +156,72 @@
                 </div>
                 </div>
               </div>
-
-
             </div>
-
         </div>
     </section>
     <section>
-        <p>This is section 2</p>
+        
     </section>
-    <section>
-        <p> This is section 3</p>
-    </section>
-
+    <section id="sign-up">
+        <h1 class="text-center"> <strong>Sign Up !</strong></h1>
+        <h3 class="text-center"> Baby's Details :</h3>
+        <form form method="POST" action="https://formdump.codeinstitute.net">
+          <div class="row g-3">
+            <div class="col-4 sharp-corners">
+              <label for="firstname" class="form-label"> Baby's Name :</label>
+            <input type="text" class="form-control" id="firstname">
+            </div>
+            <div class="col-4 sharp-corners">
+              <label for="name_adult" class="form-label"> Parent's Name :</label>
+              <input type="text" class="form-control" id="name_adult">
+            </div>
+          <div class="col-4 sharp-corners">
+            <label for="email" class="form-label"> Your Email Address :</label>
+            <input type="email" class="form-control" id="email">
+          </div>
+          <div class="col-12 sharp-corners">
+            <button type="submit" class="btn btn-outline-success">Send</button>
+          </div>
+          </div>      
+        </form>
+      </section>
     </main>
-    <footer>
-        <p>This is footer section </p>
+    <footer class="mt-auto">
+            <div class="container-fluid" id="contactus">
+              <div class="row">
+                <!--contact info-->
+                <p class="h2 text-center"><strong> Contact Us ! </strong></p>
+                <div class="col-12 text-center">
+                  <p> +353-892151098 | shiningsprouts@gmail.com</p>
+                  <p> Shining Sprouts Academy, 16 Knocklyon, Dublin</p>
+                </div>
+                <!-- Social Group Links -->
+                 <div>
+                <ul id="social-networks">
+                  <li>
+                      <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                          aria-label="Visit our Facebook page (opens in a new tab)">
+                          <i class="fa-brands fa-facebook"></i></a>
+                  </li>
+                  <li>
+                      <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                          aria-label="Visit our Twitter page (opens in a new tab)">
+                          <i class="fa-brands fa-twitter-square"></i></a>
+                  </li>
+                  <li>
+                      <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                          aria-label="Visit our YouTube page (opens in a new tab)">
+                          <i class="fa-brands fa-youtube-square"></i></a>
+                  </li>
+                  <li>
+                      <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                          aria-label="Visit our Instagram page (opens in a new tab)">
+                          <i class="fa-brands fa-instagram"></i></a>
+                  </li>
+              </ul>
+            </div>
+              </div>
+            </div>
     </footer>
 </body>
 </html>
