gallary images are updated

--- a/index.html
+++ b/index.html
@@ -101,12 +101,17 @@
         <div class="row">
             <div class="col-12 col-xl-6 text-center">  
                <h2><strong> Photos/Gallary </strong></h2>
+               <div class="gallary-image">
+               <img src="assets/images/childcare_gallary_img1.jpg" width="200" height="200" alt="playing img 1">
+               <img src="assets/images/childcare_gallary_img2.jpg"  width="200" height="200" alt="playing img 1">
+               <img src="assets/images/child_care_gallary_img3.png" width="200" height="200" alt="playing img 1">
+               <img src="assets/images/child_care_gallary_img4.webp" width="200" height="200" alt="playing img 1">
+            </div>
             </div>
             <div class="col-12 col-xl-6 text-center">
-             
              <div class="row">
                 <div class="justify-text-center">
-                  <h2></h2><strong>About Us</strong></h2>
+                  <h2><strong>About Us</strong></h2>
                   <h3 class="h5 text-center"> Join Our Shining Sprouts Child Care</h3>
                   <h3 class="h5 text-center"> for age 0 - 3 years old.</h3>
                 <div>
@@ -163,7 +168,7 @@
         
     </section>
     <section id="sign-up">
-        <h1 class="text-center"> <strong>Sign Up !</strong></h1>
+        <h2 class="text-center"> <strong>Sign Up !</strong></h2>
         <h3 class="text-center"> Baby's Details :</h3>
         <form form method="POST" action="https://formdump.codeinstitute.net">
           <div class="row g-3">
