additional image file added in gallary

--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                <img src="assets/images/childcare_gallary_img2.jpg"  width="200" height="200" alt="playing img 1">
                <img src="assets/images/child_care_gallary_img3.png" width="200" height="200" alt="playing img 1">
                <img src="assets/images/child_care_gallary_img4.webp" width="200" height="200" alt="playing img 1">
+               <img src="assets/images/child_care_gallary_img5.jpg" width="200" height="200" alt="playing img 1">
+               <img src="assets/images/logo.png" width="200" height="200" alt="Shing sprouts logo">
             </div>
             </div>
             <div class="col-12 col-xl-6 text-center">
