--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script
+src="https://kit.fontawesome.com/87560690b1.js"
+crossorigin="anonymous"></script>
 </head>
 <body class= "d-flex flex-column min-vh-100">
         <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
@@ -165,14 +168,12 @@
               </div>
             </div>
         </div>
-    </section>
-    <section>
-        
+    </div>
     </section>
     <section id="sign-up">
         <h2 class="text-center"> <strong>Sign Up !</strong></h2>
         <h3 class="text-center"> Baby's Details :</h3>
-        <form form method="POST" action="https://formdump.codeinstitute.net">
+        <form method="POST" action="https://formdump.codeinstitute.net">
           <div class="row g-3">
             <div class="col-4 sharp-corners">
               <label for="firstname" class="form-label"> Baby's Name :</label>
@@ -231,8 +232,4 @@
             </div>
     </footer>
 </body>
-<script
-src="https://kit.fontawesome.com/87560690b1.js"
-crossorigin="anonymous"
-></script>
 </html>
